--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="css/christmas.css">
 
   <title>
-    Mathgames66 - Adfree Unblocked Games
+    chickenwngs:goob games - Unblocked Games(with no ads)
   </title>
 </head>
 
@@ -102,8 +102,8 @@
     </ul> 
     TODO: Have a basic search list
     -->
-    <h1>mathgames66</h1>
-    <h6>ad-free unblocked games</h6>
+    <h1>goobgames</h1>
+    <h6></h6>unblocked games (with no ads)</h6>
 
     <span class="center">
     <!-- <span class="small-text"><br>new games (added this week): Cave War [pc], Drama [mobile/pc]<br><br> -->
@@ -120,9 +120,6 @@
           If for whatever reason the game does not fit in your screen, <b>tap the "aA" button on the top left of your
             screen, and adjust your page size from 100% to whatever works best.</b>
         </span> <br><br>
-        <iframe frameBorder="none" height="300" width="500"
-          src="https://docs.google.com/document/d/e/2PACX-1vRgUnh8int3Gb2df5kjUY2LIMFQMS96cV4dXRPr0eYWnflNhD9T90v8IzDvEiejx-QG3_UoJXptykkY/pub?embedded=true"></iframe>
-
         <br>
       </span>
     </span>
