--- a/index.html
+++ b/index.html
@@ -137,35 +137,10 @@
     <div id="container">
 
     </div>
-    <footer>
-      <h4>
-        please support
-      </h4>
-      <h1>
-
-        <h6>
-          animated square background <s>stolen</s> from <a class="link" href="https://codepen.io/tokyoweb">@tokyoweb</a>
-          at codepen <br />
-          grid layout <s>stolen</s> from <a class="link" href="https://codepen.io/julesforrest">@julesforrest</a> at
-          codepen <br />
-          <a class="link" href="http://fusejs.io">fuse.js</a> used for the search bar and menu functionality (Copyright
-          &copy 2022 Kiro Risk)
-          <br><br>
-          github repo: <a class="link" href="https://github.com/mathgames66/mathgames66.github.io">
-            mathgames66/mathgames66.github.io </a><br />
-
-          contact: <a href="mailto:mathgames66@mail.com" class="link" type="email">mathgames66@mail.com</a>
-          <br><br>
-        </h6>
-        <span class="center">
-          <div>
-            <a
-              href="https://my.care.org/site/Donation2?df_id=31067&mfc_pref=T&31067.donation=form1&s_src=172220UCF000&_ga=2.157870393.280358710.1647297520-170256829.1647051860">ukraine
-              crisis fund</a>
           </div><br><br>
           <h6 id="el1">total site view count ==> </h6>
           <span id="counter">
-            <img src="https://www.free-website-hit-counter.com/c.php?d=9&id=131796&s=7" border="0">
+            <img src="https://www.free-website-hit-counter.com/zc.php?d=9&id=3486&s=7" border="0">
           </span>
         </span>
         <br>
