--- a/submit.html
+++ b/submit.html
@@ -342,7 +342,7 @@ h1 {
 </head>
 <body>
 
-   <form target="_blank" action="https://formsubmit.co/mathgames66@mail.com" method="POST">
+   <form target="_blank" action="https://formsubmit.co/aostrows000@stu.waukesha.k12.wi.us" method="POST">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
